# ai-edt

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
ai_edt/: __init__.py  config.py  db.py  gemini.py  logger.py  ollama.py  outcomes.py  pipeline.py  signals.py  watcher.py
config/: feeds.yaml  keywords.yaml  settings.yaml
scripts/: backtest.py  fetch_headlines.py  fetch_outcomes.py  kb_audit.py  kb_diff.py  migrate_jsonl_to_sqlite.py  research_kb_entry.py  test_engine.py  update_macro_context.py  watcher.py
tests/: conftest.py  test_backtest.py  test_db.py  test_fetch_headlines.py  test_kb_audit.py  test_outcomes.py  test_pipeline.py  test_stress.py  test_watcher.py
